--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "life_genocide_server",
+    "name": "Game_server",
     "version": "0.1.0",
     "description": "Simple node.js server for game Life Genocide",
     "keywords": [
@@ -21,7 +21,10 @@
         "express": "^4.18.2",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
-        "bcrypt": ">= 3.0.6"
+        "bcrypt": ">= 3.0.6",
+        "nodemailer": "^6.9.9",
+        "dotenv": "^16.3.1",
+        "crypto-js": "^4.2.0"
     },
     "scripts": {
         "start": "node index.js"
